fix: modificações nos controllers devido a criação de um segundo construtor em Paciente que aceite PacienteRepo ao invés de PacienteRepoMem